# cfd

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  tui_app.rs  walker.rs
