[package]
name = "cfd"
authors = ["Aleksander Evensen"]
description = "Finding directories using a fuzzy finding algorithm"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
crossterm = "0.25.0"
fuzzy-matcher = "0.3.7"
tui = "0.19.0"
